# cv-frame-effects

./: .gitignore  README.md
effect_sandbox/: CMakeLists.txt  cli.cpp  cli.h  contour.cpp  contour.h  effect.cpp  effect.h  main.cpp
